--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "habit-tracker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://stillgood96.github.io/Habit-Tracker/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "husky": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
